--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
-.App {
+#root {
+  padding: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-group {
+  padding: 2em;
+  display: flex;
+  gap: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.use-reducer {
+  width: 100%;
 }
 
-.App-header {
+.read-the-docs {
+  color: #888;
+}
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +26,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+  width: 100%;
+} */
 
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  display: flex;
+  justify-content: space-between;
 }
